[tool.poetry]
name = "data-546"
version = "0.1.0"
description = ""
authors = ["dayvagrant"]

[tool.poetry.dependencies]
python = "^3.6"
lxml = "^4.5.0"
bs4 = "^0.0.1"
html5lib = "^1.0.1"
fake_useragent = "^0.1.11"
fake-useragent = "^0.1.11"
requests = "^2.23.0"
textacy = "^0.10.0"
loguru = "^0.4.1"
torrequest = "^0.1.0"
retrying = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
